--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT=5000
 JWT_PASS=fabricio5566
 DB_CONNECT=mongodb://127.0.0.1:27017/bookbox
+API_GOOGLEBOOKS=AIzaSyADUzGAjE7dGhWXzVb60Ohr1G8SFd6pF6M
